Fix spacing for persistent/non-persistent

--- a/src/components/ResourceItem/ResourceItem.scss
+++ b/src/components/ResourceItem/ResourceItem.scss
@@ -46,6 +46,7 @@ $resource-list-item-variables: (
       // stylelint-disable-next-line selector-max-specificity
       .Actions {
         @include action-unhide;
+        right: spacing(loose);
 
         // stylelint-disable-next-line max-nesting-depth
         @include page-content-when-partially-condensed {
